<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Title -->
    <string name="flash_title" translatable="false">Flash Intesity</string>

    <!-- Switch bar -->
    <string name="flash_enable_title">Enable Flashlight</string>

    <!-- Intro -->
    <string name="flash_footer_summary">Control the intesity of the flashlight. Values can be changed when flash is on. Select the brightnesses here and it will be applied to all innovations of turning flash on. While the QS panel flash is on, the app can not turn off flash and this behavior is intended.</string>

    <!-- Modes -->
    <string name="flash_intesity_1">Brightness 1</string>
    <string name="flash_intesity_2">Brightness 2</string>
    <string name="flash_intesity_3">Brightness 3</string>
    <string name="flash_intesity_4">Brightness 4</string>
    <string name="flash_intesity_5">Brightness 5</string>

    <!-- Tests, Infos -->
    <string name="flash_current_intesity">Current brightness intesity: %d</string>
    <string name="flash_current_on">Flash is currently %s</string>
    <string name="disabled_qs">Use the QS panel flash to turn off flashlight</string>

    <!-- On Off -->
    <string name="on">on</string>
    <string name="off">off</string>

    <!-- Categories -->
    <string name="flash_status_category">Current Flash Status</string>
    <string name="flash_intesities_category">Available Intesities</string>
</resources>
