<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/flash_title">

    <com.android.settingslib.widget.MainSwitchPreference
        android:defaultValue="false"
        android:key="flash_enable"
        android:title="@string/flash_enable_title" />

    <com.android.settingslib.widget.TopIntroPreference
        android:key="flash_top_intro"
        android:title="@string/flash_top_intro_summary" />

    <Preference
	android:key="flash_current_intesity"
	android:selectable="false"/>

    <Preference
	android:key="flash_current_on"
	android:selectable="false"/>

    <com.android.settingslib.widget.RadioButtonPreference
        android:key="flash_intesity_1"
        android:title="@string/flash_intesity_1" />

    <com.android.settingslib.widget.RadioButtonPreference
        android:key="flash_intesity_2"
        android:title="@string/flash_intesity_2" />

    <com.android.settingslib.widget.RadioButtonPreference
        android:key="flash_intesity_3"
        android:title="@string/flash_intesity_3" />

    <com.android.settingslib.widget.RadioButtonPreference
        android:key="flash_intesity_4"
        android:title="@string/flash_intesity_4" />

    <com.android.settingslib.widget.RadioButtonPreference
        android:key="flash_intesity_5"
        android:title="@string/flash_intesity_5" />

</PreferenceScreen>
